fixed bottom bar, centered. testing different css if on mobile

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 500px) {
+    body {
+        background-color: lightblue;
+    }
+}
+
 body{
     background-color: #2A2A2A;
     }
@@ -23,14 +29,17 @@ a{
 
 .bottombar{
     background-color: #555555;
-    width: 800px;
+    width: 1000px;
+    width: 100%;
     margin:auto;
     text-align: center;
     }
 .bottombar a{
+    display:inline-block;
+    width: 266.66px;
     color: #FFFFFF;
-    padding-left: 70px;
-    padding-right: 70px;
+    padding-left: 33.33px;
+    padding-right: 33.33px;
     padding-top: 5px;
     padding-bottom: 5px;
     }
